// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with a time 1`] = `
<GridRow
  id="some-key"
  onDelete={[Function]}
>
  <span
    className="src-modules-time-components-grid-row__date"
  >
    Monday
  </span>
  <span
    className="src-modules-time-components-grid-row__time"
  >
    23:00
  </span>
</GridRow>
`;

exports[`should render correctly with a times range 1`] = `
<GridRow
  id="some-key"
  onDelete={[Function]}
>
  <span
    className="src-modules-time-components-grid-row__date"
  >
    Monday
  </span>
  <span
    className="src-modules-time-components-grid-row__times-range"
  >
    From 
    22:00
  </span>
</GridRow>
`;

exports[`should render correctly with audience tags 1`] = `
<GridRow
  id="some-key"
  onDelete={[Function]}
>
  <span
    className="src-modules-time-components-grid-row__date"
  >
    Monday
  </span>
  <span
    className="src-modules-time-components-grid-row__time"
  >
    23:00
  </span>
  <div
    className="src-modules-time-components-grid-row__tags"
  >
    <span
      className="src-modules-time-components-grid-row__tag"
      key="tag-id"
    >
      Tag Label
    </span>
  </div>
</GridRow>
`;
